# CWebServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/HTTP/HTTPRequest/: overview.md  toString.md
docs/HTTP/HTTPResponse/: overview.md
docs/Model/: add.md  overview.md
docs/Server/: handleConnection.md  overview.md  run.md
docs/Veiw/Template/: overveiw.md  replace.md  replaceAll.md
example/: CMakeLists.txt  main.cpp  views.h
example/resources/: home.html
src/: CMakeLists.txt  exampleClassConfig.h  main.cpp
src/HTTP/: HTTPRequest.cpp  HTTPRequest.h  HTTPResponse.cpp  HTTPResponse.h
src/Model/: Model.cpp  Model.h
src/Server/: Server.cpp  Server.h
src/Sockets/: ServSock.cpp  ServSock.h
src/View/: Template.cpp  Template.h
tst/: CMakeLists.txt
tst/ModelTests/: ExampleFunctions.h  ModelTest.cpp
tst/TemplateTests/: TemplateTest.cpp  basic.html
